# monogenic

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
example/: monogenicImageTest.cpp  monogenicTest.cpp
example/cpp/: Makefile
example/python/: monogenicImageTest.py
python/: CMakeLists.txt  pymonogenic.cpp
src/: monogenicProcessor.cpp
